<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cards</string>

    <string name="tabLabel">#%1$s</string>

    <string name="search_string_label">Search Text</string>
    <string name="search_string_hint">Enter Search Text"</string>

    <string name="search_button_text">Search</string>
    <string name="reset_button_text">Reset</string>
    <string name="search_no_results_toast">No results matching the given search parameters.</string>
    <plurals name="number_of_search_results">
        <item quantity="one">\u0020/ %d result</item>
        <item quantity="other">\u0020/ %d results</item>
    </plurals>
    <string name="search_options_label">Basic Filters</string>
    <string name="advanced_options_label">Custom Filters</string>
    <plurals name="number_of_advanced_filters">
        <item quantity="one">%d custom filter.</item>
        <item quantity="other">%d custom filters.</item>
    </plurals>
    <string name="advanced_filter_hint_text">Enter Search Value</string>
    <string name="card_image_content_desc">Card Image</string>
    <string name="about_app_label">About</string>
    <string name="info_list_title">Rulings</string>
    <string name="unknown">Unknown</string>

    <string name="cards_about_contact_line">If you have suggestions or find an issue with the app, please visit the project\'s <a href="http://www.github.com/scottrick/cards">GitHub page</a>, or email me at <a href="mailto:scottrick49@gmail.com">scottrick49@gmail.com</a>.</string>

    <string name="advanced_filter_contains">Contains</string>
    <string name="advanced_filter_does_not_contain">Doesn\'t Contain</string>
    <string name="advanced_filter_equals">Equals</string>
    <string name="advanced_filter_not_equals">Not Equals</string>
    <string name="advanced_filter_greater_than">&gt;</string>
    <string name="advanced_filter_greater_than_or_equal">&gt;=</string>
    <string name="advanced_filter_less_than">&lt;</string>
    <string name="advanced_filter_less_than_or_equal">&lt;=</string>

    <string name="carousel_info_line_1_label">LABEL_1</string>
    <string name="carousel_info_line_2_label">LABEL_2</string>
    <string name="carousel_info_line_3_label">LABEL_3</string>
</resources>
