<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.CardSearchFragment">

    <ProgressBar
        android:id="@+id/search_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/search_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:text="@string/search_string_label"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bordered"
                android:padding="@dimen/default_padding">

                <EditText
                    android:id="@+id/search_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_string_hint"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="@integer/maxSearchStringLength"
                    android:maxLines="1"
                    android:minHeight="@dimen/ui_widget_default_size"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/text_search_options_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_edittext">

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/dropdown_options_parent_container_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:text="@string/search_options_label"
                android:textColor="?attr/colorOnBackground" />

            <FrameLayout
                android:id="@+id/dropdown_options_parent_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bordered"
                android:paddingStart="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingEnd="@dimen/default_padding">

                <LinearLayout
                    android:id="@+id/dropdown_options_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </FrameLayout>

            <TextView
                android:id="@+id/advanced_filter_container_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding"
                android:text="@string/advanced_options_label"
                android:textColor="?attr/colorOnBackground" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/advanced_filter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:background="@drawable/background_bordered"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:id="@+id/advanced_filter_add_imageview"
                    android:layout_width="@dimen/ui_widget_default_size"
                    android:layout_height="@dimen/ui_widget_default_size"
                    android:layout_marginStart="@dimen/default_padding"
                    android:padding="@dimen/default_padding_2x"
                    android:src="@drawable/tab_new_plus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/advanced_filter_status_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:gravity="center"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/advanced_filter_add_imageview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/advanced_options_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>